# pyioopt

./: CMakeLists.txt  README.md
example/: dummyEventDump.py  dummyReader.py  exampleDataGenerator.py
pyioopt/: CMakeLists.txt  __init__.py  dataModel.py  geometry.py  reader.py
pyioopt/core/: data_model.py  geometry.py  reader.py
pyioopt/wcsim/: CMakeLists.txt  py_wcsim_reader.cc  py_wcsim_reader.hh  testWCSim.py  testWCSim_CapBar_npzToH5.py  testWCSim_lowE_CapBar_toNPZ.py  wcsimReader.py  wcsim_reader.py
